# delivery_bot

devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: bot_model.pc
devel/share/bot_model/cmake/: bot_modelConfig.cmake
src/bot_model/: CMakeLists.txt  package.xml
src/bot_model/config/: config.rviz
src/bot_model/launch/: .rviz.launch.swp  rviz.launch
src/bot_model/urdf/: mybot.urdf
src/bot_model/world/: sample.world
